--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Grocery Shopping App</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="manifest" href="../manifest.json">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <header>
