--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header-content">
-            <h1 class="header-title">🛒 Grocery Shopping</h1>
+            <h1 class="header-title">🛒 Grocery Shopping v 0.2</h1>
             <div class="theme-toggle">
                 <button id="theme-toggle" class="theme-toggle-btn" aria-label="Toggle dark mode">🌙</button>
             </div>
